[gd_scene load_steps=3 format=3 uid="uid://0wxt6jm0w0bf"]

[ext_resource type="Script" path="res://Scripts/Enemy.gd" id="1_kveps"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_b2nm0"]
radius = 104.0
height = 260.0

[node name="Enemy" type="CharacterBody2D"]
y_sort_enabled = true
collision_layer = 3
collision_mask = 3
motion_mode = 1
wall_min_slide_angle = 0.0
safe_margin = 0.951
script = ExtResource("1_kveps")
speed = 200

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1, 33)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_b2nm0")

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
navigation_layers = 3
path_postprocessing = 1
avoidance_enabled = true
radius = 44.51
debug_enabled = true

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="EnemyHitbox" type="Area2D" parent="."]

[node name="DamageCooldown" type="Timer" parent="."]
wait_time = 0.8

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="area_entered" from="EnemyHitbox" to="." method="_on_enemy_hitbox_area_entered"]
[connection signal="area_exited" from="EnemyHitbox" to="." method="_on_enemy_hitbox_area_exited"]
[connection signal="timeout" from="DamageCooldown" to="." method="_on_damage_cooldown_timeout"]
